updates static menu

--- a/index.html
+++ b/index.html
@@ -1,13 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Popeyes</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"/>
   </head>
-  <body>
 
+  <body>
+    <section class="topbar">
+      <img src="assets/images/popeyes-logo.svg" alt="logo" class="banner" />
+    </section>
+
+    <header class="subbar">
+      <h1>Explore Our Menu</h1>
+    </header>
+
+    </div>
+    <main class="subtitle">
+      <h2>
+        Explore our menu below. You can also click on the 'Restaurants' tab to
+        find a store or place an order.
+      </h2>
+    </main>
+
+    <div id="cardcontainer">
+      <a href="https://www.popeyes.com/chicken-sandwich"></a>
+        <div class="previewCard">
+          <img src="assets/images/ChickenSandwich.png" alt="Chicken Sandwich" />
+          <div class="cardContent">
+            <h3>Chicken Sandwich</h3>
+            <h4>See more</h4>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.popeyes.com/signature-chicken">
+        <div class="previewCard">
+          <img src="assets/images/SignatureChicken.png" alt="Signature Chicken" />
+          <div class="cardContent">
+            <h3>Signature Chicken</h3>
+            <h4>See more</h4>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.popeyes.com/tenders-wings">
+        <div class="previewCard">
+          <img src="assets/images/ChickenTenders.png" alt="Tenders"/>
+          <div class="cardContent">
+            <h3>Chicken Tenders</h3>
+            <h4>See more</h4>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.popeyes.com/seafood">
+        <div class="previewCard">
+          <img src="assets/images/Seafood.png" alt="Seafood"/>
+          <div class="cardContent">
+            <h3>Seafood</h3>
+            <h4>See more</h4>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.popeyes.com/sides">
+        <div class="previewCard">
+          <img src="assets/images/Sides.png" alt="Sides" />
+          <div class="cardContent">
+            <h3>Sides</h3>
+            <h4>See more</h4>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.popeyes.com/beverages">
+        <div class="previewCard">
+          <img src="assets/images/Beverages.png" alt="Beverages" />
+          <div class="cardContent">
+            <h3>Beverages</h3>
+            <h4>See more</h4>
+          </div>
+        </div>
+      </a>
+      <a href="https://www.popeyes.com/desserts">
+        <div class="previewCard">
+          <img src="assets/images/Desserts.png" alt="Desserts" />
+          <div class="cardContent">
+            <h3>Desserts</h3>
+            <h4>See more</h4>
+          </div>
+        </div>
+      </a>
+    </div>
+    <footer>
+      <div class="footerlinks">
+        <a href="https://www.popeyes.com/explore-menu"><h5>Menu</h5></a>
+        <a href="https://www.popeyes.com/company"><h5>Company</h5></a>
+        <a href="https://www.popeyes.com/our-story"><h5>Our Story</h5></a>
+        <a href="https://www.popeyes.com/franchise"><h5>Franchise Opportunities</h5></a>
+        <a href="https://careers.popeyes.com/"><h5>Careers</h5></a>
+        <a href="https://www.popeyes.com/legal-page"><h5>Trademarks</h5></a>
+        <a href="https://www.popeyes.com/contact-us"><h5>Support</h5></a>
+      </div>
+      <div class="footerlinkssmall">
+          <a href="https://www.popeyes.com/terms-of-service"><h6>Terms Of Service</h6></a>
+          <a href="https://www.popeyes.com/privacy-policy"><h6>Privacy Policy</h6></a>
+          <a href="https://www.popeyes.com/accessibility-statementy"><h6>Accessibility Statement</h6></a>
+          <a href="https://www.popeyes.com/sitemap"><h6>Sitemap</h6></a>
+          <a href="https://www.popeyes.com/foundation/"><h6>Foundation</h6></a>
+          <a href="http://www.rbi.com/Investor-Home"><h6>Investor Relations</h6></a>
+          <a href="Diagnostics"><h6>Diagnostics</h6></a>
+      </div>
+      <div class="footertext">
+        <h6>TM & © 2020 Popeyes Louisiana Kitchen, Inc.</h6>
+        <h6>Prices may vary.</h6>
+        <h6>All pictures are shown for illustrative purposes only. Actual product may vary due to product enhancement.</h6>
+      </div>
+      <div class="socialicons">
+        <a href="https://www.facebook.com/PopeyesLouisianaKitchen/"><img src="assets/images/facebook.svg" alt="Facebook" class="socialicons"/></a>
+        <a href="https://twitter.com/PopeyesChicken"><img src="assets/images/twitter.svg" alt="Twitter" class="socialicons"/></a>
+        <a href="https://www.youtube.com/user/popeyes"><img src="assets/images/youtube.svg" alt="Youtube" class="socialicons"/></a>
+        <a href="https://www.instagram.com/popeyeslouisianakitchen/"><img src="assets/images/instagram.svg" alt="Instagram" class="socialicons"/></a>
+      </div>
+    </footer>
   </body>
 </html>
