--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 
   <body>
     <header>
-      <nav class="topbar">
-        <img src="assets/images/popeyes-logo.svg" alt="logo" class="banner" />
+      <nav id="navigationbar">
+        <div class="pages">
+          <a href="https://www.popeyes.com/store-locator"><h3>Order</h3></a>
+          <a href="https://www.popeyes.com/store-locator/service-mode"><h3>Restaurants</h3></a>
+          <a href="https://www.popeyes.com/offers"> <h3>Offers</h3></a>
+          <a href= ></a><h3>More</h3></a>
+        </div>
+        <img src="assets/images/popeyes-logo.svg" alt="logo" id="popeyeslogo" />
       </nav>
-      <h1 class="subbar">Explore Our Menu</h1>
+      <h1 id="exploremenu">Explore Our Menu</h1>
     </header>
 
     <main>
-      <h2 class="subtitle">
+      <h2 id="pagetext">
         Explore our menu below. You can also click on the 'Restaurants' tab to
         find a store or place an order.
       </h2>
@@ -133,33 +139,35 @@
           All pictures are shown for illustrative purposes only. Actual product
           may vary due to product enhancement.
         </h6>
-      </div>
-      <div class="socialiconswrapper">
-        <a href="https://www.facebook.com/PopeyesLouisianaKitchen/"
-          ><img
-            src="assets/images/facebook.svg"
-            alt="Facebook"
-            class="socialicons"
-        /></a>
-        <a href="https://twitter.com/PopeyesChicken"
-          ><img
-            src="assets/images/twitter.svg"
-            alt="Twitter"
-            class="socialicons"
-        /></a>
-        <a href="https://www.youtube.com/user/popeyes"
-          ><img
-            src="assets/images/youtube.svg"
-            alt="Youtube"
-            class="socialicons"
-        /></a>
-        <a href="https://www.instagram.com/popeyeslouisianakitchen/"
-          ><img
-            src="assets/images/instagram.svg"
-            alt="Instagram"
-            class="socialicons"
-        /></a>
-      </div>
+       <div class="socialiconswrapper">
+          <a href="https://www.facebook.com/PopeyesLouisianaKitchen/"
+            ><img
+              src="assets/images/facebook.svg"
+              alt="Facebook"
+              class="socialicons"
+          /></a>
+          <a href="https://twitter.com/PopeyesChicken"
+            ><img
+              src="assets/images/twitter.svg"
+              alt="Twitter"
+              class="socialicons"
+          /></a>
+          <a href="https://www.youtube.com/user/popeyes"
+            ><img
+              src="assets/images/youtube.svg"
+              alt="Youtube"
+              class="socialicons"
+          /></a>
+          <a href="https://www.instagram.com/popeyeslouisianakitchen/"
+            ><img
+              src="assets/images/instagram.svg"
+              alt="Instagram"
+              class="socialicons"
+          /></a>
+        </div>
+        <div class="popeyeschickenlogo">
+          <img src="assets/images/love-that-chicken.svg" alt="Popeyes Chicken Logo"/>
+        </div> 
     </footer>
   </body>
 </html>
