added tracking ids to markup

--- a/Public/index.html
+++ b/Public/index.html
@@ -1,3 +1,4 @@
+index.html
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,7 +13,7 @@
     />
   </head>
 
-  <body>
+  <body data-trackingid="body">
     <header>
       <nav id="navigationbar">
         <div class="pages">
@@ -31,73 +32,73 @@
         Explore our menu below. You can also click on the 'Restaurants' tab to
         find a store or place an order.
       </h2>
-      <div id="cardcontainer">
+      <div id="cardcontainer" data-trackingid="card-container">
         <a href="https://www.popeyes.com/chicken-sandwich">
-          <div class="previewCard">
-            <img
+          <div class="previewCard" data-trackingid="chicken-sandwich-card">
+            <img data-trackingid="chicken-sandwich-image"
               src="assets/images/ChickenSandwich.png"
               alt="Chicken Sandwich"
             />
             <div class="cardContent">
               <h3>Chicken Sandwich</h3>
-              <h4>See more</h4>
+              <h4 data-trackingid="chicken-sandwich-see-more">See more</h4>
             </div>
           </div>
         </a>
         <a href="https://www.popeyes.com/signature-chicken">
-          <div class="previewCard">
-            <img
+          <div class="previewCard" data-trackingid="signature-chicken-card">
+            <img data-trackingid="signature-chicken-image"
               src="assets/images/SignatureChicken.png"
               alt="Signature Chicken"
             />
             <div class="cardContent">
               <h3>Signature Chicken</h3>
-              <h4>See more</h4>
+              <h4 data-trackingid="signature-chicken-see-more">See more</h4>
             </div>
           </div>
         </a>
         <a href="https://www.popeyes.com/tenders-wings">
-          <div class="previewCard">
-            <img src="assets/images/ChickenTenders.png" alt="Tenders" />
+          <div class="previewCard" data-trackingid="chicken-tenders-card">
+            <img data-trackingid="chicken-tenders-image" src="assets/images/ChickenTenders.png" alt="Tenders" />
             <div class="cardContent">
               <h3>Chicken Tenders</h3>
-              <h4>See more</h4>
+              <h4 data-trackingid="chicken-tenders-see-more">See more</h4>
             </div>
           </div>
         </a>
         <a href="https://www.popeyes.com/seafood">
-          <div class="previewCard">
-            <img src="assets/images/Seafood.png" alt="Seafood" />
+          <div class="previewCard" data-trackingid="seafood-card">
+            <img data-trackingid="seafood-image" src="assets/images/Seafood.png" alt="Seafood" />
             <div class="cardContent">
               <h3>Seafood</h3>
-              <h4>See more</h4>
+              <h4 data-trackingid="seafood-see-more">See more</h4>
             </div>
           </div>
         </a>
         <a href="https://www.popeyes.com/sides">
-          <div class="previewCard">
-            <img src="assets/images/Sides.png" alt="Sides" />
+          <div class="previewCard" data-trackingid="sides-card">
+            <img data-trackingid="sides-image" src="assets/images/Sides.png" alt="Sides" />
             <div class="cardContent">
               <h3>Sides</h3>
-              <h4>See more</h4>
+              <h4 data-trackingid="sides-see-more">See more</h4>
             </div>
           </div>
         </a>
         <a href="https://www.popeyes.com/beverages">
-          <div class="previewCard">
-            <img src="assets/images/Beverages.png" alt="Beverages" />
+          <div class="previewCard" data-trackingid="beverages-card">
+            <img data-trackingid="beverages-image" src="assets/images/Beverages.png" alt="Beverages" />
             <div class="cardContent">
               <h3>Beverages</h3>
-              <h4>See more</h4>
+              <h4 data-trackingid="beverages-see-more">See more</h4>
             </div>
           </div>
         </a>
         <a href="https://www.popeyes.com/desserts">
-          <div class="previewCard">
-            <img src="assets/images/Desserts.png" alt="Desserts" />
+          <div class="previewCard" data-trackingid="desserts-card" >
+            <img data-trackingid="desserts-image" src="assets/images/Desserts.png" alt="Desserts" />
             <div class="cardContent">
               <h3>Desserts</h3>
-              <h4>See more</h4>
+              <h4 data-trackingid="desserts-see-more" >See more</h4>
             </div>
           </div>
         </a>
