set up clicks endpoint

--- a/Public/index.html
+++ b/Public/index.html
@@ -170,5 +170,6 @@ index.html
           <img src="assets/images/love-that-chicken.svg" alt="Popeyes Chicken Logo"/>
         </div> 
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
